<resources>
    <string name="app_name">P&amp;P Helper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dice_roll">DiceRollActivity</string>
    <string-array name="Races">
        <item>Human</item>
        <item>Half Orc</item>
        <item>Elf</item>
        <item>Half Elf</item>
        <item>Gnome</item>
        <item>Halfling</item>
        <item>Dwarf</item>
    </string-array>
    <string-array name="Classes">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="Gear">
        <item>Gauntlet</item>
        <item>Unarmed Strike</item>
        <item>Dagger</item>
        <item>Dagger, Punching</item>
        <item>Gauntlet, Spiked</item>
        <item>Mace, Light</item>
        <item>Sickle</item>
        <item>Club</item>
        <item>Mace, Heavy</item>
        <item>Morningstar</item>
        <item>Shortspear</item>
        <item>Longspear</item>
        <item>Quarterstaff</item>
        <item>Spear</item>
        <item>Crossbow, Heavy</item>
        <item>Crossbow, Light</item>
        <item>Dart</item>
        <item>Javelin</item>
        <item>Sling</item>
        <item>Axe, Throwing</item>
        <item>Hammer, Light</item>
        <item>Handaxe</item>
        <item>Kukri</item>
        <item>Pick, Light</item>
        <item>Sap</item>
        <item>Shield, Light</item>
        <item>Spiked Armor</item>
        <item>Spiked Shield, Light</item>
        <item>Sword, Sword</item>
        <item>Battlexaxe</item>
        <item>Flail</item>
        <item>Longsword</item>
        <item>Pick, Heavy</item>
        <item>Rapier</item>
        <item>Scimitar</item>
        <item>Shield, Heavy</item>
        <item>Spiked Shield, Heavy</item>
        <item>Trident</item>
        <item>Warhammer</item>
        <item>Falchion</item>
        <item>Glaive</item>
        <item>Greataexe</item>
        <item>Greatclub</item>
        <item>Flail, Heavy</item>
        <item>Greatsword</item>
        <item>Guisearme</item>
        <item>Halberd</item>
        <item>Lance</item>
        <item>Ranseur</item>
        <item>Scythe</item>
        <item>Longbow</item>
        <item>Longbow, Composite</item>
        <item>Shortbow</item>
        <item>Shortbow, Composite</item>
        <item>Kama</item>
        <item>Nunchaku</item>
        <item>Sai</item>
        <item>Siangham</item>
        <item>Sword, Bastard</item>
        <item>Waraxe, Dwarven</item>
        <item>Whip</item>
        <item>Axe, Orc Double</item>
        <item>Chain, Spiked</item>
        <item>Flail, Dire</item>
        <item>Hammer, Gnome Hooked</item>
        <item>Sword, Two-Bladed</item>
        <item>Urgrosh, dwarven</item>
        <item>Bolas</item>
        <item>Crossbow, Hand</item>
        <item>Crossbow, Repeating Heavy</item>
        <item>Crossbow, Repeating Light</item>
        <item>Net</item>
        
    </string-array>
    <string name="CC">Character creation</string>
    <string name="Custom">- Customization</string>
    <string name="dr">Dice Roller</string>
    <string name="race">"Race: "</string>
    <string name="classes">"Classes: "</string>
    <string name="gear">"Gear: "</string>
    <string name="addSpell">Add spell here...</string>
    <string name="misc">Add Misc Modifier...</string>
    <string name="tal">0</string>
    <string name="spell">"Spells: "</string>
    <string name="name">"Name: "</string>
    <string name="whatname">What\'s your name...</string>
    <string name="ascores">"Ability Score: "</string>
    <string name="hp">Max Hit Points: </string>
    <string name="chp">Current Hit Points: </string>
    <string name="ac">AC: </string>
    <string name="tac">Touch AC: </string>
    <string name="ftac">Flat Foot AC: </string>
    <string name="initiative">"Initiative: "</string>
    <string name="weapon">"Weapon: "</string>
    <string name="skills">"Skills: "</string>
    <string-array name="Melee">
        <item>Hail</item>
        <item>To</item>
        <item>Thee</item>
        <item>Placeholder</item>
        <item>Your</item>
        <item>Ship</item>
        <item>Has</item>
        <item>Sailed</item>
        <item>To</item>
        <item>Sea</item>
    </string-array>
    <string-array name="Ranged">
        <item>Hail</item>
        <item>To</item>
        <item>Thee</item>
        <item>Placeholder</item>
        <item>Your</item>
        <item>Ship</item>
        <item>Has</item>
        <item>Sailed</item>
        <item>To</item>
        <item>Sea</item>
    </string-array>
    <string-array name="Touch">
        <item>Hail</item>
        <item>To</item>
        <item>Thee</item>
        <item>Placeholder</item>
        <item>Your</item>
        <item>Ship</item>
        <item>Has</item>
        <item>Sailed</item>
        <item>To</item>
        <item>Sea</item>
    </string-array>
    <string-array name="Initiative">
        <item>Hail</item>
        <item>To</item>
        <item>Thee</item>
        <item>Placeholder</item>
        <item>Your</item>
        <item>Ship</item>
        <item>Has</item>
        <item>Sailed</item>
        <item>To</item>
        <item>Sea</item>
    </string-array>
    <string-array name="Skills">
        <item>Appraise</item>
        <item>Balance</item>
        <item>Bluff</item>
        <item>Climb</item>
        <item>Concentration</item>
        <item>Craft</item>
        <item>Decipher Script</item>
        <item>Diplomacy</item>
        <item>Disable Divice</item>
        <item>Disguise</item>
        <item>Escape Artist</item>
        <item>Forgery</item>
        <item>Gather Information</item>
        <item>Handle Animal</item>
        <item>Heal</item>
        <item>Hide</item>
        <item>Intimidate</item>
        <item>Jump</item>
        <item>Knowledge</item>
        <item>Listen</item>
        <item>Move Silently</item>
        <item>Open Lock</item>
        <item>Perform</item>
        <item>Profession</item>
        <item>Ride</item>
        <item>Search</item>
        <item>Sense Motive</item>
        <item>Sleight Of Hand</item>
        <item>Spellcraft</item>
        <item>Spot</item>
        <item>Survival</item>
        <item>Swim</item>
        <item>Tumble</item>
        <item>Use Magic Device</item>
        <item>Use Rope</item>
    </string-array>
    <string-array name="Fortitude">
        <item>Hail</item>
        <item>To</item>
        <item>Thee</item>
        <item>Placeholder</item>
        <item>Your</item>
        <item>Ship</item>
        <item>Has</item>
        <item>Sailed</item>
        <item>To</item>
        <item>Sea</item>
    </string-array>
    <string-array name="Reflex">
        <item>Hail</item>
        <item>To</item>
        <item>Thee</item>
        <item>Placeholder</item>
        <item>Your</item>
        <item>Ship</item>
        <item>Has</item>
        <item>Sailed</item>
        <item>To</item>
        <item>Sea</item>
    </string-array>
    <string-array name="Will">
        <item>Hail</item>
        <item>To</item>
        <item>Thee</item>
        <item>Placeholder</item>
        <item>Your</item>
        <item>Ship</item>
        <item>Has</item>
        <item>Sailed</item>
        <item>To</item>
        <item>Sea</item>
    </string-array>
    <string-array name="Language">
        <item>Abyssal</item>
        <item>Aquan</item>
        <item>Celestial</item>
        <item>Common</item>
        <item>Draconic</item>
        <item>Druidic</item>
        <item>Dwarven</item>
        <item>Elven</item>
        <item>Giant</item>
        <item>Gnome</item>
        <item>Goblin</item>
        <item>Gnoll</item>
        <item>Dwarven</item>
        <item>Halfing</item>
        <item>Ignan</item>
        <item>Infernal</item>
        <item>Orc</item>
        <item>Sylvan</item>
        <item>Terran</item>
        <item>Undercommon</item>
    </string-array>
    <string-array name="Alignment">
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string-array name="Skeells">
        <item>Hail</item>
        <item>To</item>
        <item>Thee</item>
        <item>Placeholder</item>
        <item>Your</item>
        <item>Ship</item>
        <item>Has</item>
        <item>Sailed</item>
        <item>To</item>
        <item>Sea</item>
    </string-array>
    <string name="language">"Language: "</string>
    <string name="resultDiceType">resultDiceType</string>
    <string name="resultDiceNumber">resultDiceNumber</string>
    <string name="resultMiscNumber">resultMiscNumber</string>
    <string name="alignment">"Alignment: "</string>
    <string name="gold">Gold: </string>
    <string name="armor">"Armor: "</string>
    <string name="Subtitle">- Customization: Part 1</string>
    <string name="subtitle">- Customization: Part 2</string>
    <string name="ClassChoose">Class: </string>
    <string name="MainTitle">MainTitle</string>
    <string name="CCMain">Character creation</string>
    <string name="GearMain">"Gear: "</string>
    <string name="FeatsMain">"Feats: "</string>
    <string name="part2">Part 2</string>
    <string name="part1">Part 1</string>
    <string name="AppNameMenu">P&amp;P Helper</string>
    <string name="CreateCharMenu">Create character</string>
    <string name="LoadCharMenu">Load character</string>
    <string name="CharMenu">Characters</string>
    <string name="SettingsMenu">Settings</string>
    <string name="LoadCharInLoadCharActivity">Load character</string>
    <string name="BackgroundStoryLoadChar">See background story</string>
    <string name="DeleteCharLoadChar">Delete character</string>
    <string-array name="Armor">
        <item>Padded</item>
        <item>Leather</item>
        <item>Studded Leather</item>
        <item>Chain Shirt</item>
        <item>Hide</item>
        <item>Scale Mail</item>
        <item>Chainmail</item>
        <item>Breastplate</item>
        <item>Splint Mail</item>
        <item>Banded Mail</item>
        <item>Half-plate</item>
        <item>Full Plate</item>
        <item>Padded, spiked</item>
        <item>Leather, spiked</item>
        <item>Studded Leather, spiked</item>
        <item>Chain Shirt, spiked</item>
        <item>Hide, spiked</item>
        <item>Scale Mail, spiked</item>
        <item>Chainmail, spiked</item>
        <item>Breastplate, spiked</item>
        <item>Splint Mail, spiked</item>
        <item>Banded Mail, spiked</item>
        <item>Half-plate, spiked</item>
        <item>Full Plate, spiked</item>
        <item>None</item>
    </string-array>
    <string-array name="Shield">
        <item>Buckler</item>
        <item>Shield, Light Wooden</item>
        <item>Shield, Light Steel</item>
        <item>Shield, Heavy Wooden</item>
        <item>Shield, Heavy Steel</item>
        <item>Shield, Tower</item>
        <item>Buckler</item>
        <item>Shield, Light Wooden, spiked</item>
        <item>Shield, Light Steel, spiked</item>
        <item>Shield, Heavy Wooden, spiked</item>
        <item>Shield, Heavy Steel, spiked</item>
        <item>Shield, Tower</item>
        <item>None</item>
    </string-array>
    <string name="DiceRollMenu">Dice roller</string>
    <string name="savenpart2">Save and move to part 2</string>
</resources>